# mnist_proj

./: README.md  pyproject.toml
code/app/: app.py
code/app/static/css/: style.css
code/app/static/js/: canvas.js
code/app/templates/: base.html  index.html
code/model/: Gen_Model.ipynb
code/model/models/: mnist_model.h5
